--- a/templates/layout/master.html
+++ b/templates/layout/master.html
@@ -15,6 +15,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon/favicon.ico' %}" />
 
+    <!-- sweet alert here -->
+     <link rel="stylesheet" href="{% static "vendor/libs/sweetalert2/dist/sweetalert2.min.css" %}"  >
+
     <!-- Include the styles partial -->
     {% include "./partials/styles.html" %}
 
