--- a/apps/patients/templates/patients/view_patients.html
+++ b/apps/patients/templates/patients/view_patients.html
@@ -22,7 +22,7 @@
                 <!-- Header -->
                 <div class="d-flex align-items-center justify-content-between mb-4">
                     <h3 class="section-title mb-0">{{ page_title }}</h3>
-                    <a href="{% url 'patient_add'  %}" class="btn btn-outline-secondary">Add Patient</a>
+                    <a href="{% url 'add_appointment'  %}" class="btn btn-outline-secondary">Add Patient</a>
                 </div>
 
                 {% for msg in messages %}
