--- a/templates/layout/partials/menu/vertical/vertical_menu.html
+++ b/templates/layout/partials/menu/vertical/vertical_menu.html
@@ -81,7 +81,7 @@
           </a>
           <ul class="menu-sub">
 
-            <li class="menu-item {% if '/patients/' in request.path %}active{% endif %}">
+            <li class="menu-item {% if '/view-patients/' in request.path %}active{% endif %}">
               <a  href="{% url 'view_patients'  %}" class="menu-link">
                 <div class="text-truncate" data-i18n="Without navbar">View Patients</div>
               </a>
