--- a/apps/patients/templates/patients/edit_patient.html
+++ b/apps/patients/templates/patients/edit_patient.html
@@ -40,6 +40,7 @@
                     {{ msg }}
                     </div>
                 {% endfor %}
+
             {% comment %} Main Form Here {% endcomment %}
             <form method="POST" enctype="multipart/form-data">
               {% csrf_token %}
@@ -123,7 +124,7 @@
 
               <div class="d-flex justify-content-end gap-2 pt-4 mt-4 border-top">
                 <a class="btn btn-outline-secondary">Cancel</a>
-                <button type="submit" class="btn btn-primary">Save Patient</button>
+                <button type="submit" class="btn btn-primary">Update Patient</button>
               </div>
             </form>
 
@@ -188,10 +189,7 @@
 
                   $('#doctor').empty();
 
-                    //  $('#doctor').append(
-                    //       new Option("Select Doctor", 0 , false, false)
-                    //  )
-
+                    console.log(data)
                     data.forEach((item) => {
                         if (parseInt(doctorid) === item.id) {
                             $('#doctor').append(
